feat: erase and sync by reader
